# Honolulu_Vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  compile.sh  copy_libs.sh  include.cmake  main.cpp  setup-env.sh
applications/falling_ball/: CMakeLists.txt
applications/falling_ball/src/: falling_ball.cpp
applications/gltf_animation/: CMakeLists.txt  compile_shaders.sh  gltf_animation.cpp
applications/gltf_animation/shader/: tangent.vert  tangent_bc_mr_oc_em_no.frag
applications/gltf_animation/shader/include/: lighting.h.glsl  push_constants.h.glsl
applications/gltf_animation/shaders/: push_constants.glsl  tangent.vert
applications/gltf_animation/shaders/include/: constants.h.glsl  io_with_tangent.h.glsl
applications/inverse_kinematics/: CMakeLists.txt
applications/inverse_kinematics/include/: app.hpp  bone.hpp  control_point.hpp  drag_manager.hpp  draggable_component.hpp
applications/inverse_kinematics/src/: app.cpp  bone.cpp  control_point.cpp  drag_manager.cpp  main.cpp
applications/inverse_kinematics/test/: test.cpp  test_utils.hpp
applications/inward_kinematics/: CMakeLists.txt
applications/inward_kinematics/include/: app.hpp  bone.hpp  control_point.hpp  draggable_component.hpp
applications/inward_kinematics/src/: app.cpp  control_point.cpp  drag_manager.cpp  main.cpp
applications/mesh_separation/: CMakeLists.txt
applications/mesh_separation/src/: mesh_separation.cpp
applications/mesh_shader/animation_meshlet/: CMakeLists.txt  animation_meshlet.cpp
applications/mesh_shader/introduction/: CMakeLists.txt  compile_shaders.sh  introduction.cpp
applications/ray_tracing/ray_traced_triangle/: CMakeLists.txt  introducing_ray_tracing.cpp
applications/ray_tracing/scene_objects/: CMakeLists.txt  compile_ray_tracing_shader.sh  scene_objects.cpp
applications/sound_rendering/one_dimensional_fdtd/: CMakeLists.txt  one_dimensional_fdtd.cpp
applications/sound_rendering/ringing_balls/: CMakeLists.txt  ringing_balls.cpp
applications/view_frustum_culling/: CMakeLists.txt  view_frustum_culling.cpp
honolulu_game_engine/: CMakeLists.txt  Makefile  compile.sh  joystick_test.cpp  main.cpp  mapping.txt
honolulu_game_engine/honolulu_vulkan_engine/: Makefile
honolulu_game_engine/honolulu_vulkan_engine/include/: hge_frame_info.hpp  hve.hpp  hve_app.hpp  hve_buffer.hpp  hve_device.hpp  hve_frame_info.hpp  hve_game_object.hpp  hve_model.hpp  hve_rendering_system.hpp  hve_utils.hpp
honolulu_game_engine/honolulu_vulkan_engine/src/: hve_app.cpp  hve_model.cpp  hve_rendering_system.cpp
honolulu_game_engine/include/: hge_actor.hpp  hge_component.hpp  hge_default_camera.hpp  hge_game.hpp  utility.hpp
honolulu_game_engine/include/hge_actors/: hge_default_camera.hpp  hge_point_light_manager.hpp
honolulu_game_engine/include/hge_components/: hge_renderable_component.hpp  keyboardMovementComponent.hpp  line_component.hpp  mesh_component.hpp  model_component.hpp  point_light_component.hpp  viewer_component.hpp
honolulu_game_engine/src/: hge_actor.cpp  hge_component.cpp  hge_default_camera.cpp  hge_game.cpp
honolulu_game_engine/src/hge_actors/: hge_default_camera.cpp  hge_point_light_manager.cpp
honolulu_game_engine/src/hge_component/: hge_renderable_component.cpp  keyboardMovementComponent.cpp  point_light_component.cpp  viewer_component.cpp
honolulu_imgui_engine/: CMakeLists.txt
honolulu_imgui_engine/include/: hie.hpp  hie_renderer.hpp
honolulu_imgui_engine/src/: hie.cpp  hie_renderer.cpp  imgui_build.cpp
honolulu_vulkan_engine/: CMakeLists.txt  Makefile  compile.sh  main.cpp
honolulu_vulkan_engine/include/: hve.hpp  hve_app.hpp  hve_camera.hpp  hve_descriptor_set_layout.hpp  hve_device.hpp  hve_frame_info.hpp  hve_game_object.hpp  hve_model.hpp  hve_renderer.hpp  hve_rendering_system.hpp  hve_swap_chain.hpp  utility.hpp
honolulu_vulkan_engine/include/systems/: line_rendering_system.hpp  mesh_rendering_system.hpp  point_light.hpp  simple_renderer.hpp
honolulu_vulkan_engine/shader/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
honolulu_vulkan_engine/src/: hve_app.cpp  hve_buffer.cpp  hve_device.cpp  hve_model.cpp  hve_renderer.cpp  hve_swap_chain.cpp  hve_window.cpp  utility.cpp
honolulu_vulkan_engine/src/systems/: mesh_rendering_system.cpp  point_light.cpp  simple_renderer.cpp
modules/game/: CMakeLists.txt
modules/game/src/: actor.cpp  component.cpp  engine.cpp  graphics_engine.cpp  shading_system.cpp
modules/geometry/: CMakeLists.txt
modules/geometry/src/: bounding_volume.cpp  collision_detector.cpp  half_edge.cpp  intersection.cpp  mesh_model.cpp  mesh_separation.cpp  perspective_frustum.cpp
modules/geometry/test/: half_edge_test.cpp
modules/graphics/: CMakeLists.txt  compile.sh  compile_ray_tracing_shader.sh
modules/graphics/ray_tracing_shader/: closest_hit.rchit  ray_generation.rgen
modules/graphics/shader/: frame_anim_mesh.vert  grid_shader.frag  grid_shader.vert  line_shader.vert  point_light.frag  simple_shader.vert  skinning_mesh.vert  wire_frustum_shader.frag  wire_frustum_shader.vert
modules/graphics/src/: acceleration_structure.cpp  buffer.cpp  camera.cpp  descriptor_set.cpp  descriptor_set_layout.cpp  device.cpp  engine.cpp  frame_anim_mesh_model.cpp  frame_anim_meshlet_model.cpp  frame_anim_utils.cpp  introduce_ray_tracing.cpp  mesh_model.cpp  meshlet_model.cpp  model.cpp  pipeline.cpp  renderer.cpp  skinning_mesh_model.cpp  skinning_model.cpp  skinning_utils.cpp  swap_chain.cpp  utils.cpp  window.cpp
modules/gui/: CMakeLists.txt
modules/gui/src/: engine.cpp  renderer.cpp
modules/physics/: CMakeLists.txt
modules/physics/src/: bounding_sphere.cpp  bounding_volume.cpp  collision_detector.cpp  engine.cpp  fdtd_solver.cpp  particle_component.cpp  physics.cpp  rigid_component.cpp
modules/physics/test/: bounding_volume_ctor.cpp  bounding_volume_intersection_test.cpp  bounding_volumes_test.cpp
modules/vulkan/: CMakeLists.txt  compile.sh
modules/vulkan/shader/: line_shader.frag
modules/vulkan/src/: device.cpp  swap_chain.cpp
src/: hve_app.cpp  (+18 more)
(+217 files in other folders)
